[package]
name = "archiver"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/mikhailantoshkin/archiver"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bzip2 = "0.5"
flate2 = "1.0"
clap = { version = "4.0", features = ["derive"] }
tar = "0.4"
md5 = "0.7"
serde = "1"
serde_json = "1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
